--- a/package.json
+++ b/package.json
@@ -8,8 +8,52 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@ant-design/icons": "^4.6.2",
+    "@babel/core": "^7.13.10",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "antd": "^4.14.0",
+    "classnames": "^2.2.6",
+    "css-loader": "^5.2.1",
+    "dayjs": "^1.10.4",
+    "dotenv": "^8.2.0",
+    "less": "^4.1.1",
+    "less-vars-to-js": "^1.3.0",
+    "lodash": "^4.17.21",
+    "next": "^10.0.9",
+    "next-compose-plugins": "^2.2.1",
+    "next-fonts": "^1.5.1",
+    "next-redux-wrapper": "^6.0.2",
+    "nprogress": "^0.2.0",
+    "null-loader": "^4.0.1",
+    "numeral": "^2.0.6",
+    "prop-types": "^15.7.2",
+    "query-string": "^7.0.0",
+    "react": "^17.0.1",
+    "react-cookies": "^0.1.1",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.2",
+    "react-use": "^17.2.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.13.8",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-babel-module": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "frontmatter-markdown-loader": "^3.6.2",
+    "typescript": "^4.2.4",
+    "webpack": "4.44.1",
+    "webpack-filter-warnings-plugin": "^1.2.1"
   }
 }
